fix spacing for inputs and buttons on main

--- a/tracker/src/styling/main.scss
+++ b/tracker/src/styling/main.scss
@@ -5,9 +5,9 @@
 
   .timer-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
-    height: 100vh;
+    height: 95vh;
     // margin-top: 10em;
 
     #notation-timer {
@@ -15,6 +15,7 @@
       justify-content: center;
       align-items: center;
       margin-left: 1em;
+      margin-top: 10em;
       width: 100%;
       height: 24em;
 
@@ -101,7 +102,7 @@
         display: flex;
         justify-content: center;
         align-items: flex-end;
-        margin-top: 15em;
+
         .fullscreen-mute {
           width: fit-content;
           // margin-bottom: 1.5em;
